# json-simd

./: .gitignore  CMakeLists.txt  README.md  results.txt
benchmarks/: benchmark_minify.cpp
benchmarks/json-files/: generate_big_json.py
include/: json_escape_scanner.h  json_string_scanner.h  simd_minify.h  simd_minify_nibble.h  simd_prettify.h
src/: main.cpp  simd_minify.cpp  simd_minify_nibble.cpp  simd_prettify.cpp
tests/: verify_outputs.cpp
